--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,12 @@ dependencies {
     // Rx Java
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.0.1'
+
+    //Dagger
+    compile 'com.google.dagger:dagger:2.9'
+    kapt 'com.google.dagger:dagger-compiler:2.9'
+    provided 'org.glassfish:javax.annotation:10.0-b28'
+
 }
 repositories {
     mavenCentral()
