--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,9 @@ android {
 }
 
 dependencies {
+    // kotlin
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    
     testCompile 'junit:junit:4.12'
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -48,8 +51,6 @@ dependencies {
 
     // Google maps
     compile "com.google.android.gms:play-services-maps:10.2.0"
-
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     // JSON parsing/mapping
     compile 'com.fasterxml.jackson.core:jackson-databind:2.7.2'
