--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ android {
 dependencies {
     // kotlin
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    
+
     testCompile 'junit:junit:4.12'
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
@@ -56,8 +56,9 @@ dependencies {
     // JSON parsing/mapping
     compile 'com.fasterxml.jackson.core:jackson-databind:2.7.2'
 
-    // Http requests
-    compile 'com.squareup.okhttp3:okhttp:3.6.0'
+    // Retrofit
+    compile 'com.squareup.retrofit2:retrofit:2.2.0'
+    compile 'com.squareup.retrofit2:converter-jackson:2.2.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.6.0'
 
     //Dagger
